dark mode style fix

--- a/src/styles/si-insights/components/si-smart-tracker.scss
+++ b/src/styles/si-insights/components/si-smart-tracker.scss
@@ -70,12 +70,13 @@
   
         &:focus {
           outline: none;
-          // background-color: white;
           box-shadow: 0 6px 10px rgba(0,0,0,0.08);
         }
 
         &::placeholder {
-          color: rgba(255, 255, 255, 0.50);
+          @include themed() {
+            color: t($input-p);
+          }  
         }
       }
     }
@@ -86,9 +87,6 @@
   }
 
   .si-smart-tracker-content {
-    // border: 1px solid #4a4a4a;
-    // border-radius: 5px;
-    // padding: 8px;
     margin-top: 1rem;
 
     .si-smart-tracker-sort-option {
